<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

                <Button
                    android:text="@string/name_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_search"
                    android:padding="25dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"/>

                <Button
                    android:text="@string/ingredient_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ingredient_search"
                    android:padding="25dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"/>

                <Button
                    android:text="@string/all_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/all_search"
                    android:padding="25dp"
                    android:layout_marginBottom="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"/>
        </LinearLayout>
    </ScrollView>